2002-02-17  James Henstridge  <james@daa.com.au>

	* gnomine.c (main): use the "clicked" signal for the "Press to
	resume" button rather than released.  This means you can resume
	the game with spacebar.
	(main): don't bother pushing the RGB visual.  This is all handled
	for us by gtk these days.
	(main): turn off expand for the status bar.  Makes things lay out
	better.
	(focus_out_cb): make the resume button grab focus when we focus
	out.
	(lose_game): make the face button grab focus when you lose.
	(win_game): and when you win.

2002-02-16  James Henstridge  <james@daa.com.au>

	* gnomine.c (about): GnomeAbout isn't a GnomeDialog

	* minefield.c (gtk_minefield_setup_numbers): set up the pango
	layouts for the numbers.
	(gtk_mine_draw): use gdk_draw_layout() to draw the mine text.
	(gtk_minefield_set_size): queue a resize when setting the size of
	the field.
	(gtk_minefield_set_mines): don't queue the resize if the minesize
	is not changed.

	* minefield.h: use pango layouts for drawing the numbers.

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnomine.xml : move to XML.
	* help/C/gnomine-C.omf : move to XML.
	* help/C/gnomine.sgml : deleted, move to XML.
	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnomine.c (about): Don't try to translate empty string.

2001-12-30  Juan Pablo Mendoza <jpablo@gnome.org>

	* Makefile.am:
	* gnomine.c: Update to work with games-clock.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnomine.desktop:

	Install into the correct location and add a Categories
	field.
	
2001-12-17  Juan Pablo Mendoza <jpablo@gnome.org>

	* clock.h: Fix the clock to look like the old one.
	* gnomines.c: Scores works again.	  

2001-12-14  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnomines.c, minefield.c: A little clean up, and removed some deprecated stuff.

2001-12-08  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* minefield.c: Paint again the numbers with pretty colors.
