@@ -13,7 +13,7 @@ figs = \
 docname = gnome-mines
 lang = C
 omffile = gnome-mines-C.omf
-entities =
+entities = legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
 
